--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,11 +8,11 @@
     tools:context=".MainActivity">
 
     <RelativeLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:id="@+id/header"
         android:background="#F1FEFF"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/priceInput"
@@ -31,9 +31,9 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_alignTop="@+id/priceInput"
-            android:layout_toLeftOf="@+id/priceInput"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
+            android:layout_toLeftOf="@+id/priceInput"
             android:layout_toEndOf="@+id/priceInput"
             android:text="Taxable" />
 
@@ -57,26 +57,26 @@
             android:text="Total Price incl. Tax:"
             android:textSize="20sp" />
 
-
-
         <TextView
             android:id="@+id/totalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="$Total Price"
-            android:textSize="20sp"
             android:layout_alignTop="@+id/totalPriceLabel"
+            android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/totalPriceLabel"
-            android:layout_marginStart="10dp"/>
-
+            android:text="$Total Price"
+            android:textSize="20sp" />
     </RelativeLayout>
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/pricelist"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/priceListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_below="@+id/header"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
