--- a/app/src/main/res/layout/listrow.xml
+++ b/app/src/main/res/layout/listrow.xml
@@ -34,7 +34,8 @@
         android:layout_height="25sp"
         android:layout_marginEnd="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/price"
-        app:layout_constraintEnd_toStartOf="@+id/remove" />
+        app:layout_constraintEnd_toStartOf="@+id/remove"
+        android:src="@drawable/duplicate"/>
 
     <ImageView
         android:id="@+id/remove"
@@ -42,5 +43,6 @@
         android:layout_height="25sp"
         android:layout_marginEnd="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/copy"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/remove"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
