--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -20,31 +20,35 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
             android:ems="10"
             android:hint="Enter item price here"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/isTaxable"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignTop="@+id/priceInput"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_toLeftOf="@+id/priceInput"
-            android:layout_toEndOf="@+id/priceInput"
-            android:text="Taxable" />
+            android:layout_width="85dp"
+            android:layout_height="55dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="4dp"
+            android:text="Taxable"
+            app:layout_constraintBottom_toBottomOf="@+id/priceInput"
+            app:layout_constraintEnd_toStartOf="@+id/addButton" />
 
         <ImageView
             android:id="@+id/addButton"
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_alignTop="@+id/priceInput"
-            android:layout_marginStart="10dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="24dp"
             android:layout_toEndOf="@+id/isTaxable"
-            android:src="@drawable/add_price" />
+            android:src="@drawable/add_price"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/totalPriceLabel"
@@ -52,21 +56,26 @@
             android:layout_height="30dp"
             android:layout_below="@+id/priceInput"
             android:layout_alignStart="@+id/priceInput"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="20dp"
             android:text="Total Price incl. Tax:"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/priceInput" />
 
         <TextView
             android:id="@+id/totalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/totalPriceLabel"
-            android:layout_marginStart="10dp"
+            android:layout_marginEnd="52dp"
+            android:layout_marginBottom="8dp"
             android:layout_toEndOf="@+id/totalPriceLabel"
             android:text="$Total Price"
-            android:textSize="20sp" />
-    </RelativeLayout>
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/totalPriceLabel"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/priceListView"
