--- a/app/src/main/res/layout/listrow.xml
+++ b/app/src/main/res/layout/listrow.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/number"
@@ -21,28 +22,33 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="100dp"
         android:text="Price"
         android:textColor="#000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/number"
-        app:layout_constraintStart_toEndOf="@+id/number" />
+        app:layout_constraintStart_toStartOf="@+id/number" />
 
     <ImageView
         android:id="@+id/copy"
         android:layout_width="25sp"
         android:layout_height="25sp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginEnd="75dp"
+        android:src="@drawable/duplicate"
         app:layout_constraintBottom_toBottomOf="@+id/price"
-        app:layout_constraintEnd_toStartOf="@+id/remove"
-        android:src="@drawable/duplicate"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/number"
+        app:layout_goneMarginStart="100dp" />
 
     <ImageView
         android:id="@+id/remove"
         android:layout_width="25sp"
         android:layout_height="25sp"
         android:layout_marginEnd="25dp"
+        android:src="@drawable/remove"
         app:layout_constraintBottom_toBottomOf="@+id/copy"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/remove"/>
+        app:layout_constraintHorizontal_bias="0.96"
+        app:layout_constraintStart_toEndOf="@+id/copy" />
 </androidx.constraintlayout.widget.ConstraintLayout>
