--- a/app/src/main/res/layout/listrow.xml
+++ b/app/src/main/res/layout/listrow.xml
@@ -12,9 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/price"
         android:text="Number"
-        android:textColor="#A9E0F4"
+        android:textColor="#09A1D8"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,14 +25,14 @@
         android:layout_marginStart="100dp"
         android:text="Price"
         android:textColor="#000"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/number"
         app:layout_constraintStart_toStartOf="@+id/number" />
 
     <ImageView
         android:id="@+id/copy"
-        android:layout_width="25sp"
-        android:layout_height="25sp"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
         android:layout_marginStart="250dp"
         android:layout_marginEnd="30dp"
         android:src="@drawable/duplicate"
@@ -43,8 +43,8 @@
 
     <ImageView
         android:id="@+id/remove"
-        android:layout_width="25sp"
-        android:layout_height="25sp"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
         android:layout_marginEnd="15dp"
         android:src="@drawable/remove"
         app:layout_constraintBottom_toBottomOf="@+id/copy"
