--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TaxPriceCalculator" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.TaxPriceCalculator" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">#B9D1E4</item>
+        <item name="android:statusBarColor">@color/my_statusbar</item>
     </style>
 
     <style name="Theme.TaxPriceCalculator" parent="Base.Theme.TaxPriceCalculator" />
